--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -630,6 +630,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "id": "754f3186",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1254"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "london_df.size"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 68,
    "id": "07e24ccb",
    "metadata": {},
@@ -1066,7 +1087,7 @@
     "# Sort by hygiene score\n",
     "\n",
     "degree_search = 0.01\n",
-    "latitude = \n",
+    "latitude = establishments.find_one()\n",
     "longitude = \n",
     "\n",
     "query = \n",
@@ -1095,33 +1116,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "4eeb227e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of establishments in result: 55\n",
+      "[{'_id': 'Thanet', 'count': 1130},\n",
+      " {'_id': 'Greenwich', 'count': 882},\n",
+      " {'_id': 'Maidstone', 'count': 713},\n",
+      " {'_id': 'Newham', 'count': 711},\n",
+      " {'_id': 'Swale', 'count': 686},\n",
+      " {'_id': 'Chelmsford', 'count': 680},\n",
+      " {'_id': 'Medway', 'count': 672},\n",
+      " {'_id': 'Bexley', 'count': 607},\n",
+      " {'_id': 'Southend-On-Sea', 'count': 586},\n",
+      " {'_id': 'Tendring', 'count': 542}]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a pipeline that: \n",
     "# 1. Matches establishments with a hygiene score of 0\n",
     "# 2. Groups the matches by Local Authority\n",
     "# 3. Sorts the matches from highest to lowest\n",
-    "\n",
+    "match_q = {'$match': {'scores.Hygiene': 0}}\n",
+    "group_q = {'$group': {'_id': '$LocalAuthorityName', 'count': { '$sum': 1 }}}\n",
+    "sort_q = {'$sort': { 'count': -1 }}\n",
+    "pipeline = [match_q, group_q, sort_q]\n",
     "# Print the number of documents in the result\n",
-    "\n",
-    "# Print the first 10 results\n"
+    "results = list(establishments.aggregate(pipeline))\n",
+    "print(f'Number of establishments in result: {len(results)}')\n",
+    "# Print the first 10 results\n",
+    "pprint(results[0:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "d8aab364",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows in DataFrame:  55\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Thanet</td>\n",
+       "      <td>1130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Greenwich</td>\n",
+       "      <td>882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Maidstone</td>\n",
+       "      <td>713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Newham</td>\n",
+       "      <td>711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Swale</td>\n",
+       "      <td>686</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         _id  count\n",
+       "0     Thanet   1130\n",
+       "1  Greenwich    882\n",
+       "2  Maidstone    713\n",
+       "3     Newham    711\n",
+       "4      Swale    686"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert the result to a Pandas DataFrame\n",
-    "\n",
+    "bad_hygiene_df = pd.DataFrame(results)\n",
     "# Display the number of rows in the DataFrame\n",
-    "\n",
-    "# Display the first 10 rows of the DataFrame\n"
+    "print(\"Rows in DataFrame: \", len(bad_hygiene_df))\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "bad_hygiene_df.head(5)\n"
    ]
   }
  ],
