--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -1271,38 +1271,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b70b159d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "02532c21",
+   "execution_count": 92,
+   "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pymongo.cursor.Cursor object at 0x000001E479C90550>\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>FHRSID</th>\n",
+       "      <th>ChangesByServerID</th>\n",
+       "      <th>LocalAuthorityBusinessID</th>\n",
+       "      <th>BusinessName</th>\n",
+       "      <th>BusinessType</th>\n",
+       "      <th>BusinessTypeID</th>\n",
+       "      <th>AddressLine1</th>\n",
+       "      <th>AddressLine2</th>\n",
+       "      <th>AddressLine3</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LocalAuthorityWebSite</th>\n",
+       "      <th>LocalAuthorityEmailAddress</th>\n",
+       "      <th>scores</th>\n",
+       "      <th>SchemeType</th>\n",
+       "      <th>geocode</th>\n",
+       "      <th>RightToReply</th>\n",
+       "      <th>Distance</th>\n",
+       "      <th>NewRatingPending</th>\n",
+       "      <th>meta</th>\n",
+       "      <th>links</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>65bbb88ec499092f151aaeec</td>\n",
+       "      <td>694609</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PI/000116619</td>\n",
+       "      <td>Volunteer</td>\n",
+       "      <td>Pub/bar/nightclub</td>\n",
+       "      <td>7843</td>\n",
+       "      <td>130 - 132 Plumstead High Street</td>\n",
+       "      <td></td>\n",
+       "      <td>Plumstead</td>\n",
+       "      <td>...</td>\n",
+       "      <td>http://www.royalgreenwich.gov.uk</td>\n",
+       "      <td>health@royalgreenwich.gov.uk</td>\n",
+       "      <td>{'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...</td>\n",
+       "      <td>FHRS</td>\n",
+       "      <td>{'longitude': 0.09208, 'latitude': 51.4873437}</td>\n",
+       "      <td></td>\n",
+       "      <td>4646.965635</td>\n",
+       "      <td>False</td>\n",
+       "      <td>{'dataSource': None, 'extractDate': '0001-01-0...</td>\n",
+       "      <td>[{'rel': 'self', 'href': 'http://api.ratings.f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>65bbb88ec499092f151aaf05</td>\n",
+       "      <td>695241</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PI/000179088</td>\n",
+       "      <td>Plumstead Manor Nursery</td>\n",
+       "      <td>Caring Premises</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Plumstead Manor School Old Mill Road</td>\n",
+       "      <td></td>\n",
+       "      <td>Plumstead</td>\n",
+       "      <td>...</td>\n",
+       "      <td>http://www.royalgreenwich.gov.uk</td>\n",
+       "      <td>health@royalgreenwich.gov.uk</td>\n",
+       "      <td>{'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...</td>\n",
+       "      <td>FHRS</td>\n",
+       "      <td>{'longitude': 0.0859939977526665, 'latitude': ...</td>\n",
+       "      <td></td>\n",
+       "      <td>4646.974010</td>\n",
+       "      <td>False</td>\n",
+       "      <td>{'dataSource': None, 'extractDate': '0001-01-0...</td>\n",
+       "      <td>[{'rel': 'self', 'href': 'http://api.ratings.f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>65bbb88ec499092f151aaebe</td>\n",
+       "      <td>695223</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PI/000178842</td>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>Retailers - supermarkets/hypermarkets</td>\n",
+       "      <td>7840</td>\n",
+       "      <td>144 - 146 Plumstead High Street</td>\n",
+       "      <td></td>\n",
+       "      <td>Plumstead</td>\n",
+       "      <td>...</td>\n",
+       "      <td>http://www.royalgreenwich.gov.uk</td>\n",
+       "      <td>health@royalgreenwich.gov.uk</td>\n",
+       "      <td>{'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...</td>\n",
+       "      <td>FHRS</td>\n",
+       "      <td>{'longitude': 0.0924199968576431, 'latitude': ...</td>\n",
+       "      <td></td>\n",
+       "      <td>4646.946071</td>\n",
+       "      <td>False</td>\n",
+       "      <td>{'dataSource': None, 'extractDate': '0001-01-0...</td>\n",
+       "      <td>[{'rel': 'self', 'href': 'http://api.ratings.f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>65bbb88ec499092f151aae96</td>\n",
+       "      <td>1069652</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PI/000206841</td>\n",
+       "      <td>TIWA N TIWA African Restaurant Ltd</td>\n",
+       "      <td>Restaurant/Cafe/Canteen</td>\n",
+       "      <td>1</td>\n",
+       "      <td>152 Plumstead High Street</td>\n",
+       "      <td></td>\n",
+       "      <td>Plumstead</td>\n",
+       "      <td>...</td>\n",
+       "      <td>http://www.royalgreenwich.gov.uk</td>\n",
+       "      <td>health@royalgreenwich.gov.uk</td>\n",
+       "      <td>{'Hygiene': 5, 'Structural': 5, 'ConfidenceInM...</td>\n",
+       "      <td>FHRS</td>\n",
+       "      <td>{'longitude': 0.0927429, 'latitude': 51.4870351}</td>\n",
+       "      <td></td>\n",
+       "      <td>4646.930146</td>\n",
+       "      <td>False</td>\n",
+       "      <td>{'dataSource': None, 'extractDate': '0001-01-0...</td>\n",
+       "      <td>[{'rel': 'self', 'href': 'http://api.ratings.f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>65bbb88ec499092f151aaed2</td>\n",
+       "      <td>1380578</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14425</td>\n",
+       "      <td>Howe and Co Fish and Chips - Van 17</td>\n",
+       "      <td>Mobile caterer</td>\n",
+       "      <td>7846</td>\n",
+       "      <td>Restaurant And Premises 107A Plumstead High St...</td>\n",
+       "      <td></td>\n",
+       "      <td>Plumstead</td>\n",
+       "      <td>...</td>\n",
+       "      <td>http://www.royalgreenwich.gov.uk</td>\n",
+       "      <td>health@royalgreenwich.gov.uk</td>\n",
+       "      <td>{'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...</td>\n",
+       "      <td>FHRS</td>\n",
+       "      <td>{'longitude': 0.0925370007753372, 'latitude': ...</td>\n",
+       "      <td></td>\n",
+       "      <td>4646.955931</td>\n",
+       "      <td>False</td>\n",
+       "      <td>{'dataSource': None, 'extractDate': '0001-01-0...</td>\n",
+       "      <td>[{'rel': 'self', 'href': 'http://api.ratings.f...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        _id   FHRSID  ChangesByServerID  \\\n",
+       "0  65bbb88ec499092f151aaeec   694609                  0   \n",
+       "1  65bbb88ec499092f151aaf05   695241                  0   \n",
+       "2  65bbb88ec499092f151aaebe   695223                  0   \n",
+       "3  65bbb88ec499092f151aae96  1069652                  0   \n",
+       "4  65bbb88ec499092f151aaed2  1380578                  0   \n",
+       "\n",
+       "  LocalAuthorityBusinessID                         BusinessName  \\\n",
+       "0             PI/000116619                            Volunteer   \n",
+       "1             PI/000179088              Plumstead Manor Nursery   \n",
+       "2             PI/000178842                              Iceland   \n",
+       "3             PI/000206841   TIWA N TIWA African Restaurant Ltd   \n",
+       "4                    14425  Howe and Co Fish and Chips - Van 17   \n",
+       "\n",
+       "                            BusinessType  BusinessTypeID  \\\n",
+       "0                      Pub/bar/nightclub            7843   \n",
+       "1                        Caring Premises               5   \n",
+       "2  Retailers - supermarkets/hypermarkets            7840   \n",
+       "3                Restaurant/Cafe/Canteen               1   \n",
+       "4                         Mobile caterer            7846   \n",
+       "\n",
+       "                                        AddressLine1 AddressLine2  \\\n",
+       "0                    130 - 132 Plumstead High Street                \n",
+       "1               Plumstead Manor School Old Mill Road                \n",
+       "2                    144 - 146 Plumstead High Street                \n",
+       "3                          152 Plumstead High Street                \n",
+       "4  Restaurant And Premises 107A Plumstead High St...                \n",
+       "\n",
+       "  AddressLine3  ...             LocalAuthorityWebSite  \\\n",
+       "0    Plumstead  ...  http://www.royalgreenwich.gov.uk   \n",
+       "1    Plumstead  ...  http://www.royalgreenwich.gov.uk   \n",
+       "2    Plumstead  ...  http://www.royalgreenwich.gov.uk   \n",
+       "3    Plumstead  ...  http://www.royalgreenwich.gov.uk   \n",
+       "4    Plumstead  ...  http://www.royalgreenwich.gov.uk   \n",
+       "\n",
+       "     LocalAuthorityEmailAddress  \\\n",
+       "0  health@royalgreenwich.gov.uk   \n",
+       "1  health@royalgreenwich.gov.uk   \n",
+       "2  health@royalgreenwich.gov.uk   \n",
+       "3  health@royalgreenwich.gov.uk   \n",
+       "4  health@royalgreenwich.gov.uk   \n",
+       "\n",
+       "                                              scores  SchemeType  \\\n",
+       "0  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
+       "1  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
+       "2  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...        FHRS   \n",
+       "3  {'Hygiene': 5, 'Structural': 5, 'ConfidenceInM...        FHRS   \n",
+       "4  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
+       "\n",
+       "                                             geocode RightToReply  \\\n",
+       "0     {'longitude': 0.09208, 'latitude': 51.4873437}                \n",
+       "1  {'longitude': 0.0859939977526665, 'latitude': ...                \n",
+       "2  {'longitude': 0.0924199968576431, 'latitude': ...                \n",
+       "3   {'longitude': 0.0927429, 'latitude': 51.4870351}                \n",
+       "4  {'longitude': 0.0925370007753372, 'latitude': ...                \n",
+       "\n",
+       "      Distance NewRatingPending  \\\n",
+       "0  4646.965635            False   \n",
+       "1  4646.974010            False   \n",
+       "2  4646.946071            False   \n",
+       "3  4646.930146            False   \n",
+       "4  4646.955931            False   \n",
+       "\n",
+       "                                                meta  \\\n",
+       "0  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
+       "1  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
+       "2  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
+       "3  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
+       "4  {'dataSource': None, 'extractDate': '0001-01-0...   \n",
+       "\n",
+       "                                               links  \n",
+       "0  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
+       "1  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
+       "2  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
+       "3  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
+       "4  [{'rel': 'self', 'href': 'http://api.ratings.f...  \n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(establishments.find({'BusinessName':'Penang Flavours'},{'geocode.latitude':1}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6ad16f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert result to Pandas DataFrame\n"
+    "# Convert result to Pandas DataFrame\n",
+    "near_penang_df = pd.DataFrame(results)\n",
+    "near_penang_df.head(5)"
    ]
   },
   {
